<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Connectsy</string>
    
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    
    <string name="dashboard_connections">Plans</string>
    <string name="dashboard_new_event">Share Plan</string>
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_search">Search Users</string>
    
    <string name="auth_login_username">username</string>
    <string name="auth_login_password">password</string>
    <string name="auth_login_login">Sign In</string>
    <string name="auth_login_reg">Sign Up</string>
    <string name="auth_login_new">Don\'t have and account?</string>
    <string name="auth_register_register">Register</string>
    <string name="auth_register_password2">password again</string>
    
    
    <string name="events_new_title_where">Where</string>
    <string name="events_new_title_what">What</string>
    <string name="events_new_title_when">When</string>
    <string name="events_new_title_who">Who</string>
    
    <string name="events_new_what">What are you doing later?</string>
    <string name="events_new_where">Where? (optional)</string>
    <string name="events_new_when">When? (optional)</string>
    <string name="events_new_button_change">Change</string>
    <string name="events_new_date_title">Date:</string>
    <string name="events_new_date_default">Today</string>
    <string name="events_new_time_title">Time:</string>
    <string name="events_new_time_default">2pm</string>
    <string name="events_new_broadcast">Broadcast:</string>
    <string name="events_new_cat">Category</string>
    <string name="events_new_button_submit">Share</string>
    
    <string name="event_view_attend">Attend!</string>
    <string name="attendant_status_0">Invited</string>
    <string name="attendant_status_1">In</string>
    <string name="attendant_status_3">Out</string>
    <string name="attendant_status_4">Running Late</string>
    <string name="attendant_status_2">Maybe Attending</string>
    
    <string name="preference_category_user">User preferences</string>
    <string name="preference_avatar">Select Profile Picture</string>
    <string name="preference_password">Change Password</string>
    <string name="preference_category_social">Social Networks</string>
    <string name="preference_social_twitter">Authorize Twitter</string>
    <string name="preference_category_notifications">Push Notifications</string>
    <string name="preference_notifications">Enable Notifications</string>
    <string name="preference_category_notification_sound">Notification Sound</string>
    <string name="preference_notification_sound">Notification Sound</string>
    <string name="preference_notification_sound_uri">Select Notification Sound</string>
    <string name="preference_category_notification_types">Notification Types</string>
    <string name="preference_notifications_invite">New Plans</string>
    <string name="preference_notifications_public">Public Plans</string>
    <string name="preference_notifications_private">Private Plans</string>
    <string name="preference_notifications_comment">Comments</string>
    <string name="preference_notifications_attend">Who\'s In</string>
    <string name="preference_notifications_follow">New Follower</string>
</resources>