<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/Main">
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_light_grey"/>
<ScrollView style="@style/FullWidth">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:padding="10px" >
	<ImageView 
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:paddingTop="5px"
	    android:paddingBottom="10px"
	    android:src="@drawable/logo_large" />
        
    <EditText
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:hint="@string/auth_login_username"
        android:id="@+id/auth_register_username" />
	<EditText
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:hint="@string/auth_login_password"
	    android:password="true"
	    android:id="@+id/auth_register_password" />
	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/auth_register_password2"
		android:password="true"
		android:id="@+id/auth_register_password2" />
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right|center_vertical" >
            <View style="@style/Spring"/>
            <TextView style="@style/Link"
                android:id="@+id/auth_register_login"
                android:text="@string/auth_login_login"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true"/>
            <TextView style="@style/Text"
                android:paddingLeft="5px"
                android:text="or"/>
			<Button style="@style/Button"
			    android:text="@string/auth_register_register"
			    android:id="@+id/auth_register_button" />
	</LinearLayout> 
</LinearLayout>
</ScrollView>
</LinearLayout> 