<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FillAll">
<LinearLayout style="@style/FillAll"
    android:orientation="vertical">
    <FrameLayout style="@style/ActionBarFrame">
        <ImageView style="@style/ActionBarBackground" />
	    <LinearLayout style="@style/ActionBar" >
	        <ImageView style="@style/ActionBarLogo" />
	        <View style="@style/Spring" />
	    </LinearLayout>
    </FrameLayout>
    
    <LinearLayout style="@style/Dashboard">
        <LinearLayout style="@style/DashboardRow">
            <Button style="@style/DashboardButton"
                android:id="@+id/dashboard_connections"
                android:text="@string/dashboard_connections"
                android:drawableTop="@drawable/dashboard_plans"/>
                
            <Button style="@style/DashboardButton"
                android:id="@+id/dashboard_new_event"
                android:text="@string/dashboard_new_event"
                android:drawableTop="@drawable/dashboard_share_plan"/>
        </LinearLayout>

        <LinearLayout style="@style/DashboardRow">
            <Button style="@style/DashboardButton"
                android:id="@+id/dashboard_search"
                android:text="@string/dashboard_search"
                android:drawableTop="@drawable/dashboard_search"/>
                
            <Button style="@style/DashboardButton"
                android:id="@+id/dashboard_profile"
                android:text="@string/dashboard_profile"
                android:drawableTop="@drawable/dashboard_profile"/>
        </LinearLayout>
    </LinearLayout>
    
    <View style="@style/VerticalSpring" />
    
<!--    <FrameLayout style="@style/DashboardExtra">-->
<!--        <View style="@style/DashboardExtraMap"-->
<!--            android:background="@drawable/green_texture"/>-->
<!--        <com.google.android.maps.MapView -->
<!--            style="@style/DashboardExtraMap"-->
<!--            android:id="@+id/dashboard_map"-->
<!--            android:clickable="true"-->
<!--            android:apiKey="" />-->
<!--         -->
<!--    </FrameLayout>-->

</LinearLayout>
<!--    <LinearLayout style="@style/FillAll"-->
<!--        android:id="@+id/notifications"-->
<!--        android:orientation="vertical">-->
<!--        -->
<!--        <View style="@style/FullWidth"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#444"-->
<!--            android:layout_alignParentTop="true"/>-->
<!--        <TextView style="@style/FullWidth"-->
<!--            android:id="@+id/notification_bar"-->
<!--            android:text="Notifications"-->
<!--            android:layout_height="40dp"-->
<!--            android:background="@drawable/notification_bar_bg"-->
<!--            android:gravity="center"-->
<!--            android:textColor="#222"-->
<!--            android:textSize="20dp"-->
<!--            android:textStyle="bold"-->
<!--            android:shadowColor="#fff"-->
<!--            android:shadowDx="0"-->
<!--            android:shadowDy="2"-->
<!--            android:shadowRadius="2"/>-->
<!--        <View style="@style/FullWidth"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#444"-->
<!--            android:id="@+id/notification_bar_border_bottom"/>-->
<!--	    <LinearLayout style="@style/FullWidth"-->
<!--	        android:orientation="vertical"-->
<!--	        android:background="#fff"-->
<!--	        android:id="@+id/notifications_body">-->
<!--	        -->
<!--            <View style="@style/VerticalSpring" />-->
<!--	    </LinearLayout>-->
<!--    </LinearLayout>-->
</FrameLayout>